# gdx-service-prototype

./: README.md
.github/: workflows
.github/workflows/: push_to_paas.yml
demo-producer-py/: Dockerfile  pyproject.toml  tasks
demo-producer-py/demo_producer/: config.py  events.py  generator.py  kafka.py  main.py
demo-producer-py/tests/unit/: test_events.py
gdx-alpha-prototype/: .gitignore  .prettierignore  README.md  app.js  data.js  manifest.yml  package-lock.json  package.json  service.js
gdx-alpha-prototype/.github/: workflows
gdx-alpha-prototype/templates/: base.html  base.html.njk  catalogue.html.njk  consumed.html  consumed.html.njk  dashboard.html  dashboard.html.njk  dataitem.html.njk  dataset.html  dataset.html.njk  datasets.html  index.html  index.html.njk  request.html.njk  requestaccess.html.njk  requestconfirmation.html.njk  requests.html.njk  shared.html  shared.html.njk
gdx-prototype-kit/: manifest.yml  package-lock.json
gdx-prototype-kit/app/: config.js  routes.js
gdx-prototype-kit/app/data/: session-data-defaults.js
gdx-prototype-kit/app/views/: access-request-confirmation.html  access-request.html  approved.html  catalogue.html  check-answers.html  consumed.html  dashboard.html  dataset.html  denied.html  further-information-confirmation.html  further-information.html  index.html  ineligible.html  request-access.html  requests.html  shared.html  view-request.html
gdx-prototype-kit/app/views/access-management/: active.html  dashboard.html  index.html  layout.html  new-request.html  onboarding.html  revoke.html  revoked-access.html  (+1 more)
(+16 files in other folders)
