[tool.poetry]
name = "demo-producer"
version = "0.1.0"
description = ""
authors = ["GDX"]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
flake8-comprehensions = "^3.8.0"
isort = "^5.10.1"
mccabe = "^0.6.1"
flake8-builtins = "^1.5.3"
flake8-print = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
